--- a/src/assets/styles/helpers.styl
+++ b/src/assets/styles/helpers.styl
@@ -2,3 +2,8 @@ centralize(type)
   if type == block
     margin-right: auto
     margin-left: @margin-right
+  else if type == absolute
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translateX(-50%) translateY(-50%)
